k8s/ratings-service.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: opp-ratings-dep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: opp-ratings-service
    spec:
      restartPolicy: Always
      containers:
        - name: opp-ratings-service
          image: giopeto/opp-ratings-service:V5
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: opp-ratings-svc
spec:
  selector:
    app: opp-ratings-service
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 8080
      # Port to forward to inside the pod
      targetPort: 8080
      # Port accessible outside cluster
      nodePort: 30004
  type: LoadBalancer
