k8s/ui-admin.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: opp-ui-admin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: opp-ui-admin
    spec:
      containers:
        - name: opp-ui-admin
          image: giopeto/opp-ui-admin:V4
          ports:
            - containerPort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: opp-ui-admin
spec:
  selector:
    app: opp-ui-admin
  ports:
    - protocol: "TCP"
      # Port accessible inside cluster
      port: 80
      # Port to forward to inside the pod
      targetPort: 80
      # Port accessible outside cluster
      nodePort: 30001
  type: LoadBalancer
