k8s/ingress-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: opp-gateway-ingress-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: online-publishing-platform.io
    http:
      paths:
      - path: /articles(/|$)(.*)
        backend:
          serviceName: opp-articles-svc
          servicePort: 8080
      - path: /ratings(/|$)(.*)
        backend:
          serviceName: opp-ratings-svc
          servicePort: 8080
