k8s/ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: opp-gateway-ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-frontend
    servicePort: 80
  rules:
  - host: online-publishing-platform.io
    http:
      paths:
      - path: /
        backend:
          serviceName: opp-ui-admin-svc
          servicePort: 80
