k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: online-publishing-platform.io
    http:
      paths:
      - path: /articles
        backend:
          serviceName: opp-articles-svc
          servicePort: 8080
      - path: /
        backend:
          serviceName: opp-ui-admin-svc
          servicePort: 80
